[package]
name = "waiter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.26"
mdns-sd = "0.11"
rcgen = "0.11" # To generate certificates on the fly
rustls = "0.23"
rustls-pki-types = "1.0"
# Add these two to handle the manual TLS connection
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
